Thu Jul 24 13:29:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (serve_root): Fix typo ("doign" -> "doing").

Wed Jul 23 13:55:09 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* vers_ts.c (Version_TS): If entdata is for a directory, don't set
	vn_user and friends.
	* server.c (dirswitch): Add comment about why Subdir_Register is
	sometimes a noop here.
	* cvs.h (struct vers_ts): Fix comments about NULL vs. "" in vn_user.
	* sanity.sh (errmsg2): New tests errmsg2-10 through errmsg2-12 test
	for above fix.
	* add.c (add_directory): Call cvs_output not printf.  This fixes
	an out-of-order bug which was showing up in the testcase.

21 Jul 1997  Jim Kingdon

	* subr.c (get_file): Put st_size into an unsigned variable to
	avoid signed/unsigned warnings.

Mon Jul 21 00:19:30 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Change version number to 1.9.13.

	* Version 1.9.12.

	* sanity.sh (toplevel, head): Delete our files from the repository
	when done with them.

Sun Jul 20 15:53:08 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (admin, reserved): New tests, test most cvs admin
	behaviors.
	(log2): New tests log2-5 through log2-10 test setting the
	description via cvs admin.

Thu Jul 17 12:39:27 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (socket_buffer_input, socket_buffer_output): Add
	comment regarding size of of buffer we pass to send and recv.

Sat Jul 12 15:21:24 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* import.c, rcs.h (add_rcs_file): New argument key_opt replaces
	access to global variable keyword_opt.  New arguments desctext and
	desclen allow one to set the description.  If add_vhead is NULL,
	then omit a revision, like rcs -i.
	* import.c (process_import_file), mkmodules.c (init): Change
	callers.
	* subr.c, cvs.h (get_file): New function, adapted from code in
	update_entries.
	* client.c (update_entries): Call it.
	* commit.c (checkaddfile): Create new RCS files with add_rcs_file