@@ -1,5 +1,13 @@
 Thu Jul 24 13:29:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* main.c (main): No fatal error if parse_config returned an error.
+	* server.c (serve_root): Likewise.
+	* error.c (error): Add comment about calling from the server.
+	* parseinfo.c, cvs.h (parse_config): Remove NOERR crock.
+	Closer reading of server.c makes it seem like calling error
+	here is OK after all.
+	* sanity.sh (config): New test, tests for above fix.
+
 	* server.c (serve_root): Fix typo ("doign" -> "doing").
 
 Wed Jul 23 13:55:09 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
